#115 Fix truncated result list in mobile view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -355,7 +355,7 @@ input[type="checkbox"]:checked + label:before {
     width: 100%;
     left: 0;
     top: 0;
-    max-height: 100%;
+    max-height: none;
 
     .content {
       max-height: none;
